04-03-2025-cải thiện lỗi văng, chậm, mất kết nối

--- a/app/src/main/res/layout/custom_dialog_post.xml
+++ b/app/src/main/res/layout/custom_dialog_post.xml
@@ -7,9 +7,10 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:foreground="@drawable/overlay_gradient"
-        android:id="@+id/dialog_post_img"
-        android:src="@drawable/b"
-        />
+        android:id="@+id/dialog_post_img"/>
+<!--        android:src="@drawable/b"-->
+
+
 
     <TextView
         android:id="@+id/NamDonHangPostDialog"
