05-03-2025 - Thêm tính năng quản lý bài đăng, cải thiện google maps, fix giao diện

--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -8,7 +8,11 @@
             android:id="@+id/nav_home"
             android:title="Home"
             android:icon="@drawable/home"/>
-
+        <item
+            android:id="@+id/none"
+            android:title=""
+            android:enabled="false"
+            android:visible="false"/>
     </group>
     <item
         android:id="@+id/nav_myprofile"
