--- a/app/src/main/res/menu/menu_nav2.xml
+++ b/app/src/main/res/menu/menu_nav2.xml
@@ -12,5 +12,13 @@
         android:id="@+id/chat_nav"
         android:title="Messenger"
         android:icon="@drawable/message"/>
-
+    <item
+        android:id="@+id/personal_post"
+        android:title="Personal Post"
+        android:icon="@drawable/profile"/>
+    <item
+        android:id="@+id/none"
+        android:title=""
+        android:enabled="false"
+        android:visible="false"/>
 </menu>
