07-03-2025 - Thêm tính năng nhận/gửi sản phẩm, cải thiện nhập profile, xây dựng form nhập thông tin để nhận sản phẩm, xử lý thêm dữ liệu profile trong firebase,....

--- a/app/src/main/res/layout/fragment_onboarding3.xml
+++ b/app/src/main/res/layout/fragment_onboarding3.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:text="Let's save food together"
+        android:text="Let's Connect_Share together"
         android:layout_height="wrap_content"/>
     <View
         android:layout_width="114.47dp"
