--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,112 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="20dp"
     tools:context=".profileActivity">
 
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:background="@drawable/rectangle2">
+        android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/img_avatar"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+        <!-- Avatar -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:contentDescription="TODO"
-            android:src="@drawable/avtconech" />
+            android:background="@drawable/rectangle2">
 
-    </LinearLayout>
-    <TextView
-        android:id="@+id/name_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="@string/nameprofile"
-        android:textAppearance="@style/title" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/img_avatar"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:contentDescription="@string/avatar"
+                android:src="@drawable/avtconech" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="334dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:background="@drawable/shape"
-        android:hint="@string/nameprofile"
-        android:padding="10dp"
-        android:textColor="@color/black" />
+        <!-- Thông tin Profile -->
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Họ và tên"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/email_title_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="@string/youremail"
-        android:textAppearance="@style/title" />
+        <EditText
+            android:id="@+id/user_email"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Email"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/user_email"
-        android:layout_width="334dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:background="@drawable/shape"
-        android:hint="@string/youremail"
-        android:padding="10dp"
-        android:textColor="@color/black" />
+        <EditText
+            android:id="@+id/user_phone"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Số điện thoại"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/phone_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="@string/yourphone"
-        android:textAppearance="@style/title" />
+        <!-- Thông tin bổ sung -->
+        <EditText
+            android:id="@+id/et_city"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Thành phố"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-    <TextView
-        android:id="@+id/user_phone"
-        android:layout_width="334dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:gravity="center_vertical"
-        android:background="@drawable/shape"
-        android:hint="@string/yourphone"
-        android:padding="10dp"
-        android:textColor="@color/black" />
+        <EditText
+            android:id="@+id/et_district"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Quận/Huyện"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-    <LinearLayout
-        android:layout_width="214dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:background="@drawable/rectangle">
+        <EditText
+            android:id="@+id/et_ward"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Xã/Thị trấn"
+            android:padding="10dp"
+            android:textColor="@color/black" />
 
-        <Button
-            android:id="@+id/updateButton"
+        <EditText
+            android:id="@+id/et_street"
+            android:layout_width="334dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Đường/Số nhà"
+            android:padding="10dp"
+            android:textColor="@color/black" />
+
+        <EditText
+            android:id="@+id/et_notes"
+            android:layout_width="334dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:background="@drawable/shape"
+            android:hint="Ghi chú thêm"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:gravity="top"
+            android:inputType="textMultiLine" />
+
+        <!-- Nút Update Profile -->
+        <LinearLayout
             android:layout_width="214dp"
             android:layout_height="55dp"
-            android:background="@drawable/rectangle_1"
-            android:text="@string/changeprofile"
-            android:textAppearance="@style/create_an_a" />
+            android:layout_marginTop="25dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:background="@drawable/rectangle">
+
+            <Button
+                android:id="@+id/updateButton"
+                android:layout_width="214dp"
+                android:layout_height="55dp"
+                android:background="@drawable/rectangle_1"
+                android:text="Change Profile"
+                android:textAppearance="@style/create_an_a" />
+        </LinearLayout>
+
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
