--- a/app/src/main/res/layout/fragment_onboarding1.xml
+++ b/app/src/main/res/layout/fragment_onboarding1.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:text="Rescue the food around you"
+        android:text="Rescue around you"
         android:layout_height="wrap_content"/>
     <View
         android:layout_width="224dp"
