--- a/app/src/main/res/layout/viewpager_item.xml
+++ b/app/src/main/res/layout/viewpager_item.xml
@@ -34,12 +34,13 @@
                     android:foreground="@drawable/overlay_gradient"
                     android:scaleType="centerCrop"
                     android:src="@drawable/a" />
+
                 <RelativeLayout
+                    android:id="@+id/linertext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/linertext"
-                    android:layout_below="@id/img_viewpager">
+                    android:layout_below="@id/img_viewpager"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tvHeading"
@@ -48,11 +49,32 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="12dp"
                         android:text="TEST"
                         android:textColor="@color/black"
                         android:textSize="26dp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:ellipsize="end"
+                        android:maxLines="1" />
+
+
+                    <TextView
+                        android:id="@+id/tv_nhan"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_toStartOf="@id/btn_xemthem"
+                        android:background="@drawable/bg_textview_button"
+                        android:gravity="center"
+                        android:paddingHorizontal="16dp"
+                        android:paddingVertical="8dp"
+                        android:text="Nhận"
+
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
 
                     <Button
                         android:id="@+id/btn_xemthem"
@@ -65,6 +87,7 @@
                         android:layout_marginEnd="14dp"
                         android:backgroundTint="@color/cardview_shadow_end_color"
                         android:text="Xem thêm" />
+
                 </RelativeLayout>
 
                 <TextView
