--- a/app/src/main/res/layout/viewpager_item.xml
+++ b/app/src/main/res/layout/viewpager_item.xml
@@ -35,60 +35,53 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/a" />
 
-                <RelativeLayout
+                <LinearLayout
                     android:id="@+id/linertext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/img_viewpager"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
 
+                    <!-- TextView chiếm 2/3 chiều rộng -->
                     <TextView
                         android:id="@+id/tvHeading"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
+                        android:layout_weight="2"
                         android:layout_marginStart="8dp"
-                        android:layout_marginTop="12dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:text="TEST"
                         android:textColor="@color/black"
-                        android:textSize="26dp"
-                        android:textStyle="bold"
-                        android:ellipsize="end"
-                        android:maxLines="1" />
+                        android:textSize="26sp"
+                        android:textStyle="bold" />
 
-
+                    <!-- Button Nhận -->
                     <TextView
                         android:id="@+id/tv_nhan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginTop="12dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_toStartOf="@id/btn_xemthem"
                         android:background="@drawable/bg_textview_button"
                         android:gravity="center"
                         android:paddingHorizontal="16dp"
                         android:paddingVertical="8dp"
                         android:text="Nhận"
-
                         android:textColor="@color/black"
                         android:textSize="16sp" />
 
-
+                    <!-- Button Xem thêm -->
                     <Button
                         android:id="@+id/btn_xemthem"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginLeft="180dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_marginEnd="14dp"
+                        android:layout_marginStart="8dp"
                         android:backgroundTint="@color/cardview_shadow_end_color"
                         android:text="Xem thêm" />
 
-                </RelativeLayout>
+                </LinearLayout>
+
+
 
                 <TextView
                     android:id="@+id/tv_Heading2"
