--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:title="Home"
-            android:icon="@drawable/home"/>
+            android:id="@+id/google_map"
+            android:title="Google Maps"
+            android:icon="@drawable/google_maps"/>
         <item
             android:id="@+id/none"
             android:title=""
