--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -122,25 +122,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <EditText
-                    android:id="@+id/ThoiGianHetHan_Upload"
+                    android:id="@+id/ThongTinChiTiet"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Thời gian sử dụng còn lại:"
-                    android:inputType="number"
-                    />
-                <Spinner
-                    android:id="@+id/list_item_thoihan"
-                    android:elevation="8dp"
-                    android:paddingBottom="5dp"
-                    android:paddingRight="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:hint="Thông tin chi tiết:"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
