--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#00A0F6</color>
+    <color name="gray">#808080</color>
     <color name="green">#00FF00</color>
     <color name="red">#FF0000</color>
     <color name="BeautifulProgressDialogBg">#0DACB6</color>
