--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -136,7 +136,16 @@
                             android:id="@+id/tv_product_info"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Thông tin chi tiết sản phẩm: "
+                            android:text="Vị trí"
+                            android:textSize="14sp"
+                            android:layout_marginTop="4dp"
+                            android:singleLine="false"
+                            android:ellipsize="none" />
+                        <TextView
+                            android:id="@+id/tv_product_info1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Không có thông tin chi tiết sản phẩm "
                             android:textSize="14sp"
                             android:layout_marginTop="4dp"
                             android:singleLine="false"
