--- a/app/src/main/res/layout/row_chat_product.xml
+++ b/app/src/main/res/layout/row_chat_product.xml
@@ -46,6 +46,13 @@
                     android:id="@+id/product_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Vị trí"
+                    android:textSize="14sp"
+                    android:layout_marginTop="4dp" />
+                <TextView
+                    android:id="@+id/product_info_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Thông tin sản phẩm"
                     android:textSize="14sp"
                     android:layout_marginTop="4dp" />
