--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
@@ -34,5 +35,13 @@
         android:layout_gravity="bottom"
         android:paddingTop="100dp"
         android:icon="@drawable/logout_1"/>
+    <item
+        android:id="@+id/menu_toggle_location"
+        android:title=""
+        app:actionLayout="@layout/item_switch_location"
+        app:showAsAction="never" />
+
+
+
 
 </menu>
