--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#3F51B5</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF9649</color>
     <color name="purple_700">#FEE8B0</color>
